--- a/SepeteEkleme/Views/UrunPage.xaml
+++ b/SepeteEkleme/Views/UrunPage.xaml
@@ -9,6 +9,30 @@
       Title="UrunPage">
 
     <Grid>
-        
+        <ListBox x:Name="lbUruns" VerticalContentAlignment="Top">
+            <ListBox.ItemTemplate>
+                <ItemContainerTemplate>
+                    <WrapPanel Orientation="Horizontal" HorizontalAlignment="Stretch" >
+                        <Border BorderThickness="1" BorderBrush="#e1e1e1" Padding="10" CornerRadius="6">
+                            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Image Width="86" Source="{Binding Urun_Resim}"/>
+                                <TextBlock Text="{Binding Urun_Ad}" FontSize="18"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <TextBlock Text="{Binding Urun_Fiyat}"  FontSize="16"/>
+                                    <TextBlock Text=" ₺"  FontSize="16"/>
+                                </StackPanel>
+                                <Button x:Name="btnSepeteEkle" Click="btnSepeteEkle_Click" Content="Sepete Ekle" Tag="{Binding Urun_ID}" Width="100" Height="25" Margin="0,10,0,0" Background="White">
+                                    <Button.Resources>
+                                        <Style TargetType="Border">
+                                            <Setter Property="CornerRadius" Value="6"/>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </StackPanel>
+                        </Border>
+                    </WrapPanel>
+                </ItemContainerTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </Page>
